# ProjectLudus

./: .gitignore  ARCHITECTURE.md  App.cs  README.md  llms-full.txt  package.json
code/orchestration/: Dockerfile_dagster.Dockerfile  Dockerfile_user_code.dockerfile  README.dagster.md  dbt_preview.txt  docker-compose.dagster.dev.yml  docker-compose.dagster.prod.yml  pyproject.toml  run_typesense.py  test_incremental.py  workspace.yaml
code/orchestration/.dg/: telemetry.yaml
code/orchestration/.dlt/: secrets.toml
code/orchestration/dbt/: .user.yml  dbt_generate_docs.py  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
code/orchestration/setup/: setup.py
code/orchestration/src/orchestration/: dagster.yaml  definitions.py
code/pipeline/: pyproject.toml
code/pipeline/dlt_pipeline/: main.py  rest_to_postgres.py  sync_typesense.py
code/pipeline/igdb_transform/: .gitignore  packages.yml
pipeline/: aaa.yml  pyproject.toml
pipeline/dlt_pipeline/: endpoints.py  rest_to_postgres.py  rest_to_postgres2.py
pipeline/dlt_pipeline/.dlt/: config.toml
pipeline/dlt_pipeline/marts/: fct_game_age_ratings.sql  platform_websites.sql
pipeline/dlt_pipeline/models/sources/: sources.yml
pipeline/dlt_pipeline/models/staging/: stg_alternative_names.sql.bak
pipeline/dlt_pipeline/staging/: stg_game_artwork.sql
pipeline/igdb_transform/: dbt_generate_docs_v2.py  dbt_project.yml  generate.ps1  package-lock.yml  packages.yml
pipeline/igdb_transform/analyses/: base_model.sql  codegen.sql  generate_models.sql  override_codegen.sql
pipeline/igdb_transform/core/: bridge_company_game.sql  company.sql  ext_game_src.sql  franchise.sql  game.sql  game_engine.sql  game_mode.sql  game_status.sql  game_type.sql  genre.sql  language.sql  platform.sql  player_persp.sql  schema.yml  theme.sql
pipeline/igdb_transform/macros/: create.sql  create_m2m_view.sql
pipeline/igdb_transform/models/core/: company.sql  genre.sql  theme.sql
pipeline/igdb_transform/models/marts/: _bridge_company_developed.yml  _bridge_company_published.yml  _bridge_game_dlc.yml  _bridge_game_engine_company.yml  _bridge_game_engine_platform.yml  _bridge_game_franchise.yml  _bridge_game_game_mode.yml  _bridge_game_genre.yml  _bridge_game_theme.yml  _mart_age_rating_categories.yml  _mart_age_rating_content_description_types.yml  _mart_age_rating_content_descriptions_v2.yml  _mart_age_rating_organizations.yml  _mart_age_ratings.yml  _mart_alternative_names.yml  _mart_artwork_types.yml  _mart_artworks.yml  _mart_character_genders.yml  _mart_character_mug_shots.yml  _mart_character_species.yml  _mart_characters.yml  _mart_collection_membership_types.yml  _mart_collection_memberships.yml  _mart_collection_relation_types.yml  _mart_collection_relations.yml  _mart_collection_types.yml  _mart_collections.yml  _mart_companies.yml  _mart_company_logos.yml  _mart_company_statuses.yml  _mart_company_websites.yml  _mart_covers.yml  _mart_date_formats.yml  _mart_event_logos.yml  _mart_event_networks.yml  _mart_events.yml  _mart_external_game_sources.yml  (+207 more)
(+3393 files in other folders)
