[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dlt>=1.18.2",
    "dlt[postgres]>=1.18.2",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.0.0",
    "alive-progress>=3.3.0",
    "marimo",
    "numpy==2.3.5",
    "dbt-core",
    "dbt-postgres",
    "shandy-sqlfmt[jinjafmt]"]
