[project]
name = "orchestration"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.20",
    "dagster-dbt>=0.28.20",
    "dagster-dlt>=0.28.20",
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"
registry_modules = [
    "orchestration.components.*",
]


